--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -9,6 +9,10 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
@@ -25,6 +29,10 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
@@ -49,6 +57,10 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: setup-node
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
