--- a/.github/workflows/matrix.yml
+++ b/.github/workflows/matrix.yml
@@ -5,9 +5,10 @@ on:
       - main
 jobs:
   build:
+    continue-on-error: true
     strategy:
       matrix:
-        node_version: [16, 18, 20]
+        node_version: [12, 14, 16, 18]
         os-system: [ubuntu-latest, windows-latest]
     runs-on: ${{matrix.os-system}}
     steps:
