--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -1,8 +1,19 @@
 name: Reusable Workflow
-on: workflow_call
+on:
+  workflow_call:
+    inputs:
+      artifact-name:
+        description: Name of the artifact to upload
+        required: false
+        default: dist
+        type: string
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - name: deploy the code
-              run: echo "deploying and uploading"
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get the code
+        uses: actions/download-artifact@v4
+        with:
+          name: ${{ inputs.artifact-name }}
+      - name: deploy the code
+        run: echo "deploying and uploading"
