--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -4,8 +4,8 @@ on:
     inputs:
       artifact-name:
         description: Name of the artifact to upload
-        required: false
-        default: dist
+        required: true
+        default: dist-files
         type: string
 jobs:
   deploy:
