--- a/.github/workflows/usingReusable.yml
+++ b/.github/workflows/usingReusable.yml
@@ -12,7 +12,7 @@ jobs:
       - name: setup-node
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
@@ -32,7 +32,7 @@ jobs:
       - name: setup-node
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
@@ -61,7 +61,7 @@ jobs:
       - name: setup-node
         uses: actions/setup-node@v4
         with:
-          node-version: '20.x'
+          node-version: "20.x"
       - name: Cache dependencies
         id: cache
         uses: actions/cache@v3
@@ -82,7 +82,8 @@ jobs:
   deploy:
     needs: build
     uses: ./.github/workflows/reusable.yml
-
+    with:
+      artifact-name: dist-files
   report:
     needs: [lint, deploy]
     if: failure()
