--- a/.github/workflows/reusable.yml
+++ b/.github/workflows/reusable.yml
@@ -7,8 +7,14 @@ on:
         required: false
         default: dist
         type: string
+    outputs:
+      result:
+        description: the output of the Workflow
+        value: ${{ jobs.deploy.outputs.outcome }}
 jobs:
   deploy:
+    outputs:
+      outcome: ${{ steps.set-result.outputs.step-result }}
     runs-on: ubuntu-latest
     steps:
       - name: Get the code
@@ -19,3 +25,6 @@ jobs:
         run: ls -lah
       - name: deploy the code
         run: echo "deploying and uploading"
+      - name: check the outputs
+        id: set-result
+        run: echo "step-result=success" >> $GITHUB_OUTPUT
