--- a/.github/workflows/usingReusable.yml
+++ b/.github/workflows/usingReusable.yml
@@ -89,7 +89,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: print the deploy output
-        run: ${{ needs.deploy.outputs.result }}
+        run: echo ${{ needs.deploy.outputs.result }}
   report:
     needs: [lint, deploy]
     if: failure()
